Switch from BMPs to PNGs to allow transparent backgrounds, which look much better on shaded alternating grid rows
SVN r58300 |2018-05-21 01:25:49 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -572,21 +572,21 @@ webapp/TargetedMS/css/dropDown.css -text
 webapp/TargetedMS/css/qcTrendPlotReport.css -text
 webapp/TargetedMS/images/ChromatogramLibraryScreenshot.png -text
 webapp/TargetedMS/images/Fragment.gif -text
-webapp/TargetedMS/images/Molecule.bmp -text
-webapp/TargetedMS/images/Peptide.bmp -text
-webapp/TargetedMS/images/PeptideDecoy.bmp -text
-webapp/TargetedMS/images/PeptideDecoyLib.bmp -text
-webapp/TargetedMS/images/PeptideIrt.bmp -text
-webapp/TargetedMS/images/PeptideIrtLib.bmp -text
-webapp/TargetedMS/images/PeptideLib.bmp -text
-webapp/TargetedMS/images/PeptideQc.bmp -text
-webapp/TargetedMS/images/PeptideQcLib.bmp -text
-webapp/TargetedMS/images/PeptideStandard.bmp -text
-webapp/TargetedMS/images/PeptideStandardLib.bmp -text
-webapp/TargetedMS/images/TransitionGroup.bmp -text
-webapp/TargetedMS/images/TransitionGroupDecoy.bmp -text
-webapp/TargetedMS/images/TransitionGroupLib.bmp -text
-webapp/TargetedMS/images/TransitionGroupLibDecoy.bmp -text
+webapp/TargetedMS/images/Molecule.png -text
+webapp/TargetedMS/images/Peptide.png -text
+webapp/TargetedMS/images/PeptideDecoy.png -text
+webapp/TargetedMS/images/PeptideDecoyLib.png -text
+webapp/TargetedMS/images/PeptideIrt.png -text
+webapp/TargetedMS/images/PeptideIrtLib.png -text
+webapp/TargetedMS/images/PeptideLib.png -text
+webapp/TargetedMS/images/PeptideQc.png -text
+webapp/TargetedMS/images/PeptideQcLib.png -text
+webapp/TargetedMS/images/PeptideStandard.png -text
+webapp/TargetedMS/images/PeptideStandardLib.png -text
+webapp/TargetedMS/images/TransitionGroup.png -text
+webapp/TargetedMS/images/TransitionGroupDecoy.png -text
+webapp/TargetedMS/images/TransitionGroupLib.png -text
+webapp/TargetedMS/images/TransitionGroupLibDecoy.png -text
 webapp/TargetedMS/images/blank.gif -text
 webapp/TargetedMS/images/clippy.png -text
 webapp/TargetedMS/images/spectrum.gif -text
