Move designation of src as resource to individual modules.  IntelliJ does not like it when the resources directory overlaps with the source directory.  First step to moving resources into resources directories.
SVN r58607 |2018-06-12 14:48:31 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,14 @@ dependencies
    BuildUtils.addLabKeyDependency(project: project, config: "jspCompile", depProjectPath: ":server:modules:ms1", depProjectConfig: "apiCompile")
 
 }
+
+// TODO move resources files into resources directory to avoid this overlap
+sourceSets {
+   main {
+      resources {
+         srcDirs = ['src'] // src is included because it contains some proto files
+         exclude '**/*.java'
+         exclude '**/*.jsp'
+      }
+   }
+}
