--- a/.gitattributes
+++ b/.gitattributes
@@ -129,6 +129,7 @@ resources/schemas/dbscripts/postgresql/targetedms-18.13-18.14.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.14-18.15.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.20-18.21.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.21-18.22.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-18.22-18.23.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.30.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-13.10.sql -text
@@ -213,6 +214,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-18.13-18.14.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.14-18.15.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.20-18.21.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.21-18.22.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-18.22-18.23.sql -text
 resources/schemas/targetedms.xml -text
 resources/unimod_NO_NAMESPACE.xml -text
 src/ChromatogramGroupData.proto -text
