--- a/.gitattributes
+++ b/.gitattributes
@@ -128,6 +128,7 @@ resources/schemas/dbscripts/postgresql/targetedms-18.12-18.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.13-18.14.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.14-18.15.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.20-18.21.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-18.20-18.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.21-18.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.22-18.23.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.20.sql -text
@@ -213,6 +214,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-18.12-18.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.13-18.14.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.14-18.15.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.20-18.21.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-18.20-18.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.21-18.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.22-18.23.sql -text
 resources/schemas/targetedms.xml -text
