--- a/.gitattributes
+++ b/.gitattributes
@@ -133,6 +133,7 @@ resources/schemas/dbscripts/postgresql/targetedms-18.21-18.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.22-18.23.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.30-18.31.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-18.31-18.32.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-18.32-18.33.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.30.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-13.10.sql -text
@@ -222,6 +223,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-18.21-18.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.22-18.23.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.30-18.31.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-18.31-18.32.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-18.32-18.33.sql -text
 resources/schemas/targetedms.xml -text
 resources/unimod_NO_NAMESPACE.xml -text
 src/ChromatogramGroupData.proto -text
