Show full history of QC summary via link in webpart title, instead of just the most recent 3
SVN r63462 |2019-04-23 23:53:29 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -544,6 +544,7 @@ src/org/labkey/targetedms/view/PeptidePrecursorsView.java -text
 src/org/labkey/targetedms/view/PeptideTransitionsView.java -text
 src/org/labkey/targetedms/view/PeptideViewWebPart.java -text
 src/org/labkey/targetedms/view/PrecursorHtmlMaker.java -text
+src/org/labkey/targetedms/view/QCSummaryWebPart.java -text
 src/org/labkey/targetedms/view/QuantificationView.java -text
 src/org/labkey/targetedms/view/SmallMoleculePrecursorsView.java -text
 src/org/labkey/targetedms/view/SmallMoleculeTransitionsView.java -text
