--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ dependencies
 {
    external 'com.google.protobuf:protobuf-java:3.12.2'
    external "org.xerial:sqlite-jdbc:3.7.2"
+   external "org.apache.commons:commons-math3:${commonsMath3Version}"
    implementation "org.apache.httpcomponents:httpmime:${httpmimeVersion}"
    BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath:  BuildUtils.getCommonAssayModuleProjectPath(project.gradle, "ms2"), depProjectConfig: "apiJarFile")
    BuildUtils.addLabKeyDependency(project: project, config: "jspImplementation", depProjectPath: BuildUtils.getCommonAssayModuleProjectPath(project.gradle, "ms2"), depProjectConfig: "apiJarFile")
