--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 import org.labkey.gradle.util.BuildUtils;
 
+plugins {
+   id 'org.labkey.build.module'
+}
+
 dependencies
 {
    external "com.google.protobuf:protobuf-java:${googleProtocolBufVersion}"
